@@ -23,14 +23,16 @@
       <model>PT-PC</model>
     </general>
   </autodetect>
-  <functionality>F</functionality>
+  <functionality>D</functionality>
   <driver>ptouch</driver>
   <comments>
     <en>
+
       For arbitrary graphics, this printer can only print raster lines
-      24 pixels wide down the centre of the tape.  It can print text using
-      its built-in fonts, but that would require a special
-      text-to-PT-PC driver.&lt;p&gt;
+      24 pixels wide down the centre of the tape (and this way also
+      arbitrary fonts in low resolution).  It can print text using its
+      built-in fonts, but that would require a special text-to-PT-PC
+      driver.&lt;p&gt;
 
       Consumables/Refills: Black on White Thermal Paper,
 	Fabric Tape Blue on White,
