@@ -1,6 +1,7 @@
 2010-03-12  Till Kamppeter <till.kamppeter@gmail.com>
 
-	* printer/Brother-PT-PC.xml: Corrected consumables list.
+	* printer/Brother-PT-PC.xml: Corrected consumables list, rating
+	  and text.
 
 	* printer/Xerox-Phaser_3124.xml, driver/gdi.xml: The Xerox Phaser
 	  3124 works with the Samsung "gdi" driver. Thanks to
